force-app/main/default/objects/Mother__c/fields/mother_aadhar_number__c.field-meta.xml
<CustomField>
    <fullName>mother_aadhar_number__c</fullName>
    <label>mother aadhar number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>