force-app/main/default/objects/Mother__c/fields/Mother_annual_salary__c.field-meta.xml
<CustomField>
    <fullName>Mother_annual_salary__c</fullName>
    <label>Mother annual salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>