force-app/main/default/objects/Mother__c/fields/Mother_job__c.field-meta.xml
<CustomField>
    <fullName>Mother_job__c</fullName>
    <label>Mother job</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>public</fullName>
            </value>
            <value>
                <fullName>private</fullName>
            </value>
            <value>
                <fullName>house wife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>